# cppcia

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: ci.yml
cmake/: CustomizedProjectOptions.cmake  LLVM.cmake  ProjectOptions.cmake  Rpath.cmake  add_test.cmake  enable_customized_project_options.cmake  fetch_project_options.cmake  llvm.cmake
conan/extensions/commands/: cmd_clean.py
conan/profiles/: macos-12-clang-x86_64  macos-12-gcc-x86_64  macos-14-clang-armv8  macos-clang-armv8  ubuntu-22.04-clang-x86_64  ubuntu-22.04-gcc-x86_64  windows-2022-clang-x86_64  windows-2022-gcc-x86_64  windows-2022-msvc-x86_64
conan/recipes/boost-ext-ut/all/: conanfile.py
conan/recipes/clangd_headers/all/: conandata.yml  conanfile.py
conan/recipes/llvm/: config.yml
conan/recipes/llvm/all/: conanfile.py
conan/recipes/llvm/all/test_package/: conanfile.py
conan/recipes/llvm/system/: conanfile.py
cppcia/: CMakeLists.txt
cppcia/include/cppcia/: cppcia_main.hpp  dot.hpp  extractor.hpp  graph_util.hpp  reference.hpp  referencer.hpp
cppcia/include/cppcia/detail/: hash_value.hpp  raw_streamed.hpp
cppcia/src/: cppcia_main.cpp  extractor.cpp  main.cpp  reference.cpp  referencer.cpp
cppcia/test/: CMakeLists.txt  dot.cpp  extractor.cpp  graph_util.cpp  real.cpp  referencer.cpp
cppcia/test/test_util/include/cppcia/test/: annotations.hpp  extractor.hpp  referencer.hpp
cppcia/test/test_util/src/: annotations.cpp  extractor.cpp  referencer.cpp
example/: CMakeLists.txt
example/ast_dump/: CMakeLists.txt  bootstrap.cpp
example/ast_importer/: CMakeLists.txt  bootstrap.cpp
example/cppgrep/: CMakeLists.txt  bootstrap.cpp
example/find_declarations/: CMakeLists.txt  bootstrap.cpp
example/find_name/: CMakeLists.txt  bootstrap.cpp
example/loop_convert/: CMakeLists.txt  bootstrap.cpp
example/practice/: CMakeLists.txt
src/: CMakeLists.txt
src/cppcia/: CMakeLists.txt
src/cppcia/test/: CMakeLists.txt  qaq.cpp
src/indexer/: CMakeLists.txt
