add_executable(find_declaration EXCLUDE_FROM_ALL)
target_sources(find_declaration
  PRIVATE
  bootstrap.cpp
)
target_link_libraries(find_declaration
  PRIVATE
  cppcia_project_options
  cppcia_project_warnings
)

target_find_dependencies(find_declaration
  PRIVATE_CONFIG
  Boost
  fmt
  Microsoft.GSL
  nlohmann_json
  range-v3
  spdlog
)
target_link_system_libraries(find_declaration
  PRIVATE
  boost::boost
  fmt::fmt
  llvm::llvm
  Microsoft.GSL::GSL
  nlohmann_json::nlohmann_json
  range-v3::range-v3
  spdlog::spdlog
)